--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "prettier/prettier": "warn",
     "no-unused-vars": "warn",
     "no-console": "warn",
-    "react/no-unescaped-entities": "warn"
+    "react/no-unescaped-entities": "warn",
+    "@typescript-eslint/no-unused-vars": "off"
   }
 } 
