--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
+    "@vercel/speed-insights": "^1.2.0",
     "express": "^5.1.0",
     "next": "14.1.0",
     "react": "^18.2.0",
