--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#2E7D32",
   "icons": [
     {
-      "src": "/images/logo.jpg",
+      "src": "assets/images/morea.jpg",
       "sizes": "192x192",
       "type": "image/jpeg"
     },
     {
-      "src": "/images/logo.jpg",
+      "src": "assets/images/morea.jpg",
       "sizes": "512x512",
       "type": "image/jpeg"
     }
