Add comprehensive monitoring, analytics, and observability features

--- a/env.template
+++ b/env.template
@@ -1,31 +1,42 @@
 # Environment Variables Template
 # Copy this file to .env.local and fill in your actual values
-# NEVER commit .env.local to version control
 
-# Stripe Payment Processing
-STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
-STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key_here
+# Google Analytics
+NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
 
-# Mailchimp Newsletter (Optional)
-MAILCHIMP_API_KEY=your_mailchimp_api_key_here
-MAILCHIMP_LIST_ID=your_mailchimp_list_id_here
-MAILCHIMP_SERVER_PREFIX=us21
+# Vercel Analytics (automatically configured)
+# No additional configuration needed
 
-# Database (if implementing user accounts)
-DATABASE_URL=your_database_connection_string_here
+# Stripe (for future payment processing)
+STRIPE_SECRET_KEY=sk_test_...
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_...
 
-# Authentication (if implementing user accounts)
-JWT_SECRET=your_jwt_secret_here
-NEXTAUTH_SECRET=your_nextauth_secret_here
-NEXTAUTH_URL=https://yourdomain.com
-
-# Google Analytics (Optional)
-NEXT_PUBLIC_GA_ID=your_google_analytics_id_here
-
-# Contact Form (Optional - for email notifications)
-SMTP_HOST=your_smtp_host_here
+# Email Service (for newsletter and contact forms)
+SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your_smtp_username_here
-SMTP_PASS=your_smtp_password_here
-CONTACT_EMAIL=contact@yourdomain.com
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+
+# Mailchimp (for newsletter)
+MAILCHIMP_API_KEY=your-mailchimp-api-key
+MAILCHIMP_LIST_ID=your-mailchimp-list-id
+MAILCHIMP_SERVER_PREFIX=usX
+
+# Database (for future features)
+DATABASE_URL=your-database-url
+
+# Authentication (for future user accounts)
+NEXTAUTH_SECRET=your-nextauth-secret
+NEXTAUTH_URL=http://localhost:3000
+
+# Monitoring and Analytics
+NEXT_PUBLIC_MONITORING_ENABLED=true
+NEXT_PUBLIC_ERROR_TRACKING_ENABLED=true
+NEXT_PUBLIC_PERFORMANCE_MONITORING_ENABLED=true
+
+# Business Information
+NEXT_PUBLIC_BUSINESS_NAME="Adam Hall's Garden Center"
+NEXT_PUBLIC_BUSINESS_PHONE="(951) 674-9422"
+NEXT_PUBLIC_BUSINESS_ADDRESS="28095 Alessandro Blvd, Moreno Valley, CA 92553"
+NEXT_PUBLIC_BUSINESS_HOURS="8:00 AM - 6:00 PM Daily"
 
